2008-03-06  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c: 
	Correctly set the content types and the icon correclty. (#518679)
	Also don't add the If-None-Matcher header for now since
	early apache versions don't like it. We need to be smart about
	that later.

2008-03-06  Alexander Larsson  <alexl@redhat.com>

        * common/gsysutils.c:
	Include <sys/types.h> also (#520307)

2008-03-06  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsftp.c:
        * daemon/gvfsbackendsmb.c:
	Use g_content_type_get_icon() instead of open
	coding it. Also picks up more icons since
	that has been fixed. (#520742)
	
2008-03-06  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (ftp_connection_create),
	(ftp_connection_ensure_data_connection),
	(g_vfs_backend_ftp_pop_connection), (do_mount):
	timeout I/O or g_cond_wait after 30 seconds

2008-03-06  Alexander Larsson  <alexl@redhat.com>

        * common/gsysutils.c:
        * configure.ac:
	Include sys/uio.h if availible (#520307)

2008-03-06  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (do_mount):
	fail early if there's no ftp server where we connect

2008-03-06  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (ftp_connection_parse_system),
	(ftp_connection_use), (dir_default_iter_process):
	parse the ftp server's system. Using that information, mark dot-files
	as hidden.
	Fixes #520203

2008-03-05  A. Walton  <awalton@svn.gnome.org>

	* programs/gvfs-cat.c (main):
	* programs/gvfs-copy.c (main):
	* programs/gvfs-info.c (main):
	* programs/gvfs-ls.c (main):
	* programs/gvfs-move.c (main):
	* programs/gvfs-open.c (main):
	* programs/gvfs-save.c (main):
	* programs/gvfs-tree.c (main):
	Error out if the user passes invalid flags and warn the user.
	Fixes bug #520086.

2008-03-06  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsftp.c:
	Allow setting unix mode on sftp (#520571)
	Patch from Carlos Garcia Campos
